# ex05-airllm

./: .env-example  .gitignore  LICENSE  README.md  pyproject.toml
config/: README.md  experiment.example.toml  model_candidates.example.toml  rate_limits.example.json
docs/: AIRLLM_FEASIBILITY.md  AIRLLM_PATCH_FEASIBILITY.md  AI_WORKFLOW.md  ANALYSIS.md  COSTS.md  DECISIONS.md  EXPERIMENT_REVISION.md  FINAL_GAP_AUDIT.md  GPU_FEASIBILITY.md  HARDWARE.md  LARGE_MODEL_PREFLIGHT.md  MEASUREMENT_DESIGN.md  MEASUREMENT_RUNS.md  MODEL_SELECTION.md  PLAN.md  PRD.md  PRD_airllm_pipeline.md  PRD_measurement.md  PROMPTS.md  QUALITY.md  QUANTIZATION_PREFLIGHT.md  REQUIREMENTS_AUDIT.md  RISKS.md  SMOKE_RUN.md  SUBMISSION_CHECKLIST.md  TODO.md
experiments/: README.md
figures/: README.md
reports/: README.md  final_report.md  measurement_summary.md
results/: README.md  stage3_smoke_airllm_qwen2_0_5b.json  stage3b_prepare_qwen2_0_5b_sharded.json  stage3b_smoke_airllm_qwen2_0_5b_resharded.json  stage3c_smoke_airllm_qwen2_0_5b_torch241.json  stage3d_smoke_transformers_qwen2_0_5b_cpu.json  stage4a_smoke_airllm_qwen2_0_5b_patched.json
results/analysis/: airllm_failure_summary.json  cost_energy_assumptions.json  cost_energy_estimate.json  cost_model_v2.json  final_evidence_summary.json  roofline_classification.json  transformers_cpu_qwen2_0_5b_summary_stats.json
results/measurements/gguf_quantization_qwen2_5_0_5b/: gguf-qwen2_5_0_5b-q4_k_m-ai_agent_short-r1.json  gguf-qwen2_5_0_5b-q4_k_m-ai_agent_short-r2.json  gguf-qwen2_5_0_5b-q4_k_m-memory_management_short-r1.json  gguf-qwen2_5_0_5b-q4_k_m-memory_management_short-r2.json  gguf-qwen2_5_0_5b-q4_k_m-os_definition-r1.json  gguf-qwen2_5_0_5b-q4_k_m-os_definition-r2.json  gguf-qwen2_5_0_5b-q8_0-ai_agent_short-r1.json  gguf-qwen2_5_0_5b-q8_0-ai_agent_short-r2.json  gguf-qwen2_5_0_5b-q8_0-memory_management_short-r1.json  gguf-qwen2_5_0_5b-q8_0-memory_management_short-r2.json  gguf-qwen2_5_0_5b-q8_0-os_definition-r1.json  gguf-qwen2_5_0_5b-q8_0-os_definition-r2.json  summary.csv
results/measurements/large_model_pressure_qwen2_5_7b/: summary.csv  transformers_7b_direct_cpu_baseline_os_definition.json
results/measurements/transformers_cpu_int8_quantization_qwen2_0_5b/: summary.csv  tfcpu-int8q-qwen2_0_5b-fp32_reference-ai_agent_short-r1.json  tfcpu-int8q-qwen2_0_5b-fp32_reference-ai_agent_short-r2.json  tfcpu-int8q-qwen2_0_5b-fp32_reference-memory_management_short-r1.json  (+9 more)
src/: README.md
src/ex05_airllm/: __init__.py  airllm_compat.py  analysis_pipeline.py  analysis_stats.py  analyze_measurements.py  api_gatekeeper.py  constants.py  cost_model.py  env.py  gguf_measurement.py  large_model_pressure.py  metrics.py  prepare_sharded_model.py  prompts.py  quantization_measurement.py  result_schema.py  result_writer.py  run_gguf_quantization_measurement.py  run_large_model_pressure_baseline.py  run_transformers_cpu_int8_quantization_measurement.py  run_transformers_cpu_measurement.py  run_transformers_cpu_streaming_measurement.py  sdk.py  smoke_airllm.py  smoke_transformers_cpu.py  streaming_measurement.py  version.py
tests/: README.md
tests/unit/: test_airllm_compat.py  test_analysis_pipeline.py  test_analyze_measurements.py  test_api_gatekeeper.py  test_cost_model.py  test_env.py  test_gguf_measurement.py  test_large_model_pressure.py  test_metrics.py  test_prepare_sharded_model.py  test_prompts.py  test_quantization_measurement.py  test_result_schema.py  test_result_writer.py  test_run_gguf_quantization_measurement.py  test_run_transformers_cpu_int8_quantization_measurement.py  test_run_transformers_cpu_measurement.py  test_run_transformers_cpu_streaming_measurement.py  test_sdk.py  test_smoke_airllm.py  test_smoke_transformers_cpu.py  test_version.py
(+14 files in other folders)
