[project]
name = "ex05-airllm"
version = "1.0.0"
description = "Local massive-LLM experiment: AirLLM, quantization, and performance benchmarking."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "awad_moha" }]

# Runtime dependencies.
# The AirLLM stack is PINNED to the matrix evidenced in Stage 1D
# (docs/AIRLLM_FEASIBILITY.md): the latest optimum/transformers break AirLLM import,
# so transformers 4.44.2 + optimum 1.23.3 + sentencepiece are required.
# `torch` is sourced from the CPU-only index below (see [tool.uv.sources]) to avoid
# pulling a multi-GB CUDA build into this CPU-only WSL2 environment.
dependencies = [
    "airllm==2.11.0",
    "transformers==4.44.2",
    "optimum==1.23.3",
    "sentencepiece",
    # Pinned to 2.4.1 (Stage 3C): newer torch (2.12) triggered an AirLLM CPU meta-device
    # error; 2.4.x is closer to AirLLM 2.11's supported range. CPU wheel via pytorch-cpu index.
    "torch==2.4.1",
    # Measurement / analysis support (used from later stages):
    "psutil",
    "pandas",
    "matplotlib",
    "pydantic",
    "typer",
    "rich",
    "llama-cpp-python>=0.3.31",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ex05_airllm"]

# CPU-only PyTorch wheels (no CUDA). See docs/HARDWARE.md / docs/AIRLLM_FEASIBILITY.md.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 85
show_missing = true
